2007-12-18  Richard B. Kreckel  <kreckel@ginac.de>

	* autoconf/ltmain.sh: Update to libtool-1.5.24.
	* autoconf/config.guess: Likewise.
	* autoconf/config.sub: Likewise.
	* m4/libtool.m4: Likewise.

2007-12-18  Richard B. Kreckel  <kreckel@ginac.de>

	* src/float/transcendental/cl_F_lnx.cc: Make actuallen of type uintC.
	* src/float/transcendental/cl_F_expx.cc: Likewise.
	* src/float/transcendental/cl_F_sinhx.cc: Likewise.
	* src/float/transcendental/cl_F_sinx.cc: Likewise.

2007-12-17  Richard B. Kreckel  <kreckel@ginac.de>

	Silly workaround for silly bug in gmp.h:
	* m4/gmp.m4 (CL_GMP_SET_UINTD): Swap #include <gmp.h> and <stdio.h>.

2007-12-17  Richard B. Kreckel  <kreckel@ginac.de>

	* src/polynomial/elem/cl_UP_GF2.h (gf2_mul_table): define for sparc64.

2007-12-04  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/types.h ([su]intE): 64-bit exponents for MIPS and RS6000.

2007-12-03  Richard B. Kreckel  <kreckel@ginac.de>

	* src/float/lfloat/cl_LF.h (cl_heap_lfloat): Change len type to uintC.

2007-11-28  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/object.h: Don't redefine cl_word_alignment on sparc64.
	* src/base/digitseq/cl_asm_sparc64_.cc: Declare use of global
	register %g2 as scratch register within this file.
	Reported by Paul Irofti <bulibuta@gmail.com> and Sven Verdoolaege
	<skimo@kotnet.org>.

2007-11-03  Richard B. Kreckel  <kreckel@ginac.de>

	* src/base/digitseq/cl_asm_i386_.cc (compare_loop_up, 
	compare_loop_down): Fix empty ranges.

2007-10-12  Richard B. Kreckel  <kreckel@ginac.de>

	Fix compilation on CYGWIN:
	* src/float/transcendental/cl_LF_zeta_int.cc: Avoid leading underscores
	in variable names.
	* src/float/transcendental/cl_LF_eulerconst.cc: Likewise.
	Reported by Chris Bouchard <cbouchrd@uiuc.edu>.

2007-10-10  Richard B. Kreckel  <kreckel@ginac.de>

	* src/base/cl_low.h: Add missing linefeeds in SPARC 64 inline assembler.
	* src/base/low/cl_low_div.cc (divu_6464_6464_): Fix a copy-paste typo.