@@ -1,3 +1,8 @@
+2007-12-19  Richard B. Kreckel  <kreckel@ginac.de>
+
+	* m4/general.m4 (CL_CANONICAL_HOST_CPU): Force host_cpu=rs6000 for
+	 powerpc64 if userland is 32 bit.
+
 2007-12-18  Richard B. Kreckel  <kreckel@ginac.de>
 
 	* autoconf/ltmain.sh: Update to libtool-1.5.24.
